# elliptics-fastcgi

./: CMakeLists.txt  build.sh  clean.sh  install.sh  kill_fd.sh  rebuild.sh  remove_logs.sh  run.sh
configs/: cocaine_config.json  cproxy.conf  ioserv.conf
debian/: changelog  control  elliptics-fastcgi-dev.install  elliptics-fastcgi.install  rules
include/elliptics-fastcgi/: data_container.hpp  lookup_result.hpp  proxy.hpp
src/: component_base.cpp  component_base.hpp  embed_processor.cpp  embed_processor.hpp  lookup_result.cpp  proxy.cpp  proxy.hpp
test/: ProxyTest.py  main.html
test/ioserv/: ioserv1.conf  ioserv2.conf  ioserv3.conf
